# data_processor

./: .gitignore  README.md
data_processor/: .gitignore  README.md  __main__.py  check_data.csv  pyproject.toml  schema.yaml  setup.py  test.py  user_custom_methods.py
data_processor/core/: base_processor.py  dataset.py  execution_manager.py  operation.py  schema.py
data_processor/operations/formatting/: __init__.py  apply_function.py  clean_numeric_values.py  clean_punctuation_spacing.py  hyphenate_special_characters.py  string_uppercase.py  trim_white_spaces.py
data_processor/operations/merging/: apply_merge.py
data_processor/processors/: custom_processor.py  data_cleaning_processor.py  data_validation_processor.py  merge_processor.py  processor_a.py
data_processor/tests/: test_data_cleaning_processor.py  test_data_validation_processor.py  test_helper.py
data_processor/utils/: exception_handler.py  helper.py  helpers.py
