[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'data_processor'
version = '0.1.0'
authors = [{name = 'KrutikaTekwani', email = 'mayank.arora@curriebrown.com'}]
description = 'A pacakge to streamline operations on datasets...'
readme = 'README.md'
license = {file = "LICENSE"}